--- a/src/html/index.html
+++ b/src/html/index.html
@@ -32,10 +32,9 @@
             
             <ul class="menu__list">
                 <li class="menu__list__item"><a href="#sobremim">Sobre mim</a></li>
-                <li class="menu__list__item"><a href="#skills">Skills</a></li>
-                <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
+                <li class="menu__list__item"><a href="#skills">Skills e Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacao">Formações e Cursos</a></li>
-                <li class="menu__list__item"><a href="#xp">Experiência</a></li>
+                <li class="menu__list__item"><a href="#xp">Projetos</a></li>
                 <li class="menu__list__item contato"><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -49,13 +48,13 @@
                 src="https://github.com/moises-creator.png"
                 alt="Foto do usuário">
             <div class="title__container">
-                <h2 class="title__bio">Olá, meu nome é <strong class="about__paragraph__bold">Moisés Ximenes </strong> e construo páginas web</h2>
+                <h2 class="title__bio">Olá, meu nome é <strong class="about__paragraph__bold">Moisés Ximenes </strong> e crio soluções!</h2>
                 <h3 class="title__subsection">Estou cursando Ciência de Dados na Universidade Federal de MS e atualmente participando no projeto Oracle ONE na Alura.</h3>
                 <ul class="title__network">
                     <li class="title__network__item"><a href="https://github.com/moises-creator" target="_blank">Github <img src="../assets/arrow.png"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/o-moises-souza/" target="_blank">Linkedin <img src="../assets/arrow.png"></a></li>
                     <li class="title__network__item"><a href="https://www.instagram.com/omoisesximenes" target="_blank">Instagram <img src="../assets/arrow.png"></a></li>
-                    <li class="title__network__item"><a href="https://drive.google.com/file/d/1yGwzj1YT-Q8X3nTNO34z4pEKcvqY8tZI/view?usp=drive_link" target="_blank">Curriculo <img src="../assets/arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://drive.google.com/file/d/1yGwzj1YT-Q8X3nTNO34z4pEKcvqY8tZI/view?usp=drive_link" target="_blank">Curriculo <img src="../assets/arrow.png"></a></li><strong class="about__paragraph__bold"></strong>
                 </ul>
             </div>
         </div>
@@ -66,9 +65,14 @@
         <div class="about__container" id="sobremim">
             <h3 class="about__title">Sobre mim</h3>
 
-            <p class="about__paragraph">Sou um desenvolvedor apaixonado por tecnologia, com especialização em front-end e habilidades fullstack. Minha jornada inclui o domínio de ferramentas essenciais como <strong class="about__paragraph__bold">HTML, CSS, JavaScript, React e TypeScript</strong>, aliadas a práticas sólidas de versionamento usando <strong class="about__paragraph__bold">Git</strong>.</p>
+            <p class="about__paragraph">
+                Olá! Sou um profissional analista de dados e que está se formando em Ciência de Dados pela UFMS. Tenho o prazer de poder contribuir e compartilhar com o conhecimento na comunidade de dados. 
+                Com sólida experiência em análise de dados e cloud computing, domino ferramentas como <strong class="about__paragraph__bold">Python, SQL, Power BI, GCP e AWS</strong> para extrair, transformar e analisar grandes volumes de dados de diversas fontes.
+            </p>
 
-            <p class="about__paragraph">Além disso, estou familiarizado com o ambiente <strong class="about__paragraph__bold">Node.js</strong>, permitindo-me criar aplicações dinâmicas e eficientes. Tenho experiência em integração de <strong class="about__paragraph__bold">APIs</strong>, manipulação de <strong class="about__paragraph__bold">bancos de dados SQL</strong> e <strong class="about__paragraph__bold">uso de tecnologias de nuvem (Cloud e AWS)</strong> para garantir escalabilidade e desempenho nas aplicações que desenvolvo.</p>
+            <p class="about__paragraph">
+                Minha jornada profissional me levou desde o desenvolvimento de software até a ciência de dados, onde encontrei a paixão por desvendar os segredos por trás dos dados e utilizá-los para otimizar processos, reduzir custos e impulsionar o crescimento de empresas.
+                Sou um profissional <strong class="about__paragraph__bold">ágil, analítico e com excelente comunicação</strong>, sempre buscando novos desafios e oportunidades para contribuir com meu conhecimento e expertise.</p>
             <!-- Caso queira colocar sua própria assinatura, insira aqui! -->
         </div>
     </section>
@@ -186,9 +190,9 @@
         <h2 class="experience__section__title" id="xp">Experiência Profissional</h2>
         <div class="experiencie__box">
             <!-- Insira a logo/captura de seu projeto/trabalho -->
-            <img class="experience__img" src="./src/assets/portf-alura.jpg">
+            <img class="experience__img" src="../assets/aluraplay.png">
             <div class="experience__info">
-                <h2 class="experience__title">Portfólio alura</h2>
+                <h2 class="experience__title">Alura Play</h2>
                 <h3 class="experience__text"> Curso de HTML e CSS </h3>
                     <div class="experience__description">
                         <!-- Insira a link para demonstração do projeto no Github e/ou GithubPages -->
