--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,8 +7,8 @@
 
     <!-- Folha de estilo de CSS Linkado -->
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/responsive.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
